try to fix dark mode handler not setting local storage item in mobile

--- a/css/index.css
+++ b/css/index.css
@@ -116,7 +116,7 @@ p {
 
 #navbar {
   position: fixed;
-  /* top: -140px; */
+  will-change: transform;
   opacity: 0;
   padding-top: 20px;
   padding-bottom: 20px;
